--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/greentree31/T-tracker#readme",
   "dependencies": {
     "asciiart-logo": "^0.2.7",
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
     "mysql2": "^3.6.0"
   }
