--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "asciiart-logo": "^0.2.7",
     "console.table": "^0.10.0",
+    "dotenv": "^16.1.4",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.3.4"
   }
 }
